--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,11 @@
 
 
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>2.6.2</version>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.0-api</artifactId>
+			<version>1.0.1.Final</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
