Changed default properties values.

--- a/conf/botProperties.properties
+++ b/conf/botProperties.properties
@@ -1,5 +1,5 @@
-oauth=oauth:5dhci670u6zbnm4v94yem8bahcxgys
-username=workerbotbeta
+oauth=oauth
+username=username
 joinDBChannels=false
-defaultJoinChannels=#risterral
+defaultJoinChannels=
 imgpluginpassword=password
